--- a/dvc.yaml
+++ b/dvc.yaml
@@ -3,6 +3,8 @@ stages:
     cmd: python src/data_ingestion.py
     deps:
     - src/data_ingestion.py
+    params:
+    - data_ingestion.test_size
     outs:
     - data/raw
 
@@ -19,14 +21,19 @@ stages:
     deps:
     - data/interim
     - src/feature_engineering.py
+    params:
+    - feature_engineering.max_features
     outs:
     - data/processed
 
-  model_traiing:
+  model_training:
     cmd: python src/model_training.py
     deps:
     - data/processed
     - src/model_training.py
+    params:
+    - model_training.n_estimators
+    - model_training.random_state
     outs:
     - models/model.pkl
 
